--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Student-Teacher-Appointment-Backend",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
@@ -22,6 +23,7 @@
     "mongodb": "^6.14.2",
     "mongoose": "^6.13.8",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "nodemailer": "^6.10.0",
     "redis-server": "^1.2.2"
   },
